crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_explicit_ext_no_transpile.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, $, useStyles$ } from "@qwik.dev/core";
export const App = qrl(() => import("./test.tsx_App_Jlq9hNxnCvw.tsx"), "App_Jlq9hNxnCvw");

============================= test.tsx_App_component_ckEPmXZlub0.tsx ==
export const App_component_ckEPmXZlub0 = () => (
		<div></div>
	);
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "tsx",
  "parent": "App_Jlq9hNxnCvw",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    134,
    161
  ]
}
*/
============================= test.tsx_App_Jlq9hNxnCvw.tsx ==
import { $ } from "@qwik.dev/core";
import { useStyles$ } from "@qwik.dev/core";
export const App_Jlq9hNxnCvw = (props) => {
	useStyles$('hola');
	return $(() => (
		<div></div>
	));
};
/*
{
  "origin": "test.tsx",
  "name": "App_Jlq9hNxnCvw",
  "entry": "entry_segments",
  "displayName": "test.tsx_App",
  "hash": "Jlq9hNxnCvw",
  "canonicalFilename": "test.tsx_App_Jlq9hNxnCvw",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    81,
    165
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==
[]
