crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_export_issue.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const App = qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
export const Root = qrl(() => import("./test.tsx__1_iZVV0eoW44k"), "_1_iZVV0eoW44k");
const Other = 12;
export { Other as App };
export default App;
============================= test.tsx__1_iZVV0eoW44k.js (ENTRY POINT) ==
import { App } from "./test";
export const _1_iZVV0eoW44k = (props: Stuff) => {
	return (
		<App/>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "_1_iZVV0eoW44k",
  "entry": null,
  "displayName": "test.tsx__1",
  "hash": "iZVV0eoW44k",
  "canonicalFilename": "test.tsx__1_iZVV0eoW44k",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    136,
    192
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
export const _u6BtPnK76q4 = () => {
	return (
		<div>hola</div>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    59,
    112
  ]
}
*/
== DIAGNOSTICS ==
[]
