crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_exports.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= project/test.jsx ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { $, component$ } from "@qwik.dev/core";
const q_component_fA7aHBrXs7g = /*#__PURE__*/ qrl(() => import("./test.tsx_component_fA7aHBrXs7g"), "component_fA7aHBrXs7g");
const q__cA4RUxLrFo0 = /*#__PURE__*/ qrl(() => import("./test.tsx__cA4RUxLrFo0"), "_cA4RUxLrFo0");
export const [a, { b, v1: [c], d = v2, ...e }, f = v3, ...g] = obj;
const exp1 = 1;
const internal = 2;
export { exp1, internal as expr2 };
export function foo() {}
export class bar {}
export default function DefaultFn() {}
export const Header = qrl(() => import("./test.tsx_Header_component_1_uWM1kg0IGO0"), "Header_component_1_uWM1kg0IGO0");
export const Footer = component$();

============================= project/test.tsx_Header_component_UVBJuFYfvDo.jsx (ENTRY POINT) ==
import { Footer } from "./test";
import { a } from "./test";
import { b } from "./test";
import { bar } from "./test";
import { c } from "./test";
import { d } from "./test";
import { e } from "./test";
import { exp1 } from "./test";
import { f } from "./test";
import { foo } from "./test";
export const Header_component_UVBJuFYfvDo = () => (
		<Footer>
			<div>{a}{b}{c}{d}{e}{f}{exp1}{internal}{foo}{bar}{DefaultFn}</div>
			<div>{v1}{v2}{v3}{obj}</div>
		</Footer>
	);
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_UVBJuFYfvDo",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "UVBJuFYfvDo",
  "canonicalFilename": "test.tsx_Header_component_UVBJuFYfvDo",
  "path": "project",
  "extension": "jsx",
  "parent": "Header_component_1_uWM1kg0IGO0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    320,
    458
  ]
}
*/
============================= project/test.tsx_Header_component_1_uWM1kg0IGO0.jsx (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
import { Footer } from "./test";
import { a } from "./test";
import { b } from "./test";
import { bar } from "./test";
import { c } from "./test";
import { d } from "./test";
import { e } from "./test";
import { exp1 } from "./test";
import { f } from "./test";
import { foo } from "./test";
export const Header_component_1_uWM1kg0IGO0 = () => {
	return $(() => (
		<Footer>
			<div>{a}{b}{c}{d}{e}{f}{exp1}{internal}{foo}{bar}{DefaultFn}</div>
			<div>{v1}{v2}{v3}{obj}</div>
		</Footer>
	))
};
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_1_uWM1kg0IGO0",
  "entry": null,
  "displayName": "test.tsx_Header_component_1",
  "hash": "uWM1kg0IGO0",
  "canonicalFilename": "test.tsx_Header_component_1_uWM1kg0IGO0",
  "path": "project",
  "extension": "jsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    293,
    461
  ]
}
*/
== DIAGNOSTICS ==
[]
