crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_fix_dynamic_import.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 865
expression: output
---
============================= project/folder/test.tsx ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import thing from "../state";
//
const q_Header_component_RGgm7Ks9QWI = /*#__PURE__*/ qrl(()=>import("./test.tsx_Header_component_RGgm7Ks9QWI"), "Header_component_RGgm7Ks9QWI");
//
export function foo() {
	return import("../foo/state2");
}
export const Header = /*#__PURE__*/ componentQrl(q_Header_component_RGgm7Ks9QWI);

============================= project/folder/test.tsx_Header_component_RGgm7Ks9QWI.tsx ==
import { default as thing } from "../state";
export const Header_component_RGgm7Ks9QWI = () => {
	return (
		<div>
			{import("../folder/state3")}
			{thing}
		</div>
	);
};
/*
{
  "origin": "project/folder/test.tsx",
  "name": "Header_component_RGgm7Ks9QWI",
  "entry": "entry_segments",
  "displayName": "test.tsx_Header_component",
  "hash": "RGgm7Ks9QWI",
  "canonicalFilename": "test.tsx_Header_component_RGgm7Ks9QWI",
  "path": "project/folder",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    161,
    256
  ]
}
*/
== DIAGNOSTICS ==
[]
