crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_functional_component_2.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useStore } from '@qwik.dev/core';
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const useCounter = () => {
    return useStore({ count: 0 });
};
export const STEP = 1;
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);

============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT) ==
import { STEP } from "./test";
import { useCounter } from "./test";
import { useStore } from "@qwik.dev/core";
export const App_component_ckEPmXZlub0 = (props) => {
	const state = useCounter();
	const _ref = {};
	_ref.thing = useStore({_ref.thing: 0});
	const { thing } = _ref;
	const STEP_2 = 2;

	const count2 = state.count * 2;
	return (
		<div onClick$={() => state.count+=count2 }>
			<span>{state.count}</span>
			{buttons.map(btn => (
				<button
					onClick$={() => state.count += btn.offset + thing + STEP + STEP_2 + props.step}
				>
					{btn.name}
				</button>
			))}

		</div>

	);
};
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    180,
    579
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx_App_component_div_q_e_click_mi4E1piTWe8.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const App_component_div_q_e_click_mi4E1piTWe8 = () => {
    const count2 = _captures[0];
    const state = _captures[1];
    return state.count += count2;
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_div_q_e_click_mi4E1piTWe8",
  "entry": null,
  "displayName": "test.tsx_App_component_div_q_e_click",
  "hash": "mi4E1piTWe8",
  "canonicalFilename": "test.tsx_App_component_div_q_e_click_mi4E1piTWe8",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "count2",
    "state"
  ],
  "loc": [
    339,
    364
  ]
}
*/
============================= test.tsx_App_component_div_button_q_e_click_UB6Fs5a3bd8.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
import { STEP } from "./test";
export const App_component_div_button_q_e_click_UB6Fs5a3bd8 = () => {
    const STEP_2 = _captures[0];
    const btn = _captures[1];
    const props = _captures[2];
    const state = _captures[3];
    const thing = _captures[4];
    return state.count += btn.offset + thing + STEP + STEP_2 + props.step;
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_div_button_q_e_click_UB6Fs5a3bd8",
  "entry": null,
  "displayName": "test.tsx_App_component_div_button_q_e_click",
  "hash": "UB6Fs5a3bd8",
  "canonicalFilename": "test.tsx_App_component_div_button_q_e_click_UB6Fs5a3bd8",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "STEP_2",
    "btn",
    "props",
    "state",
    "thing"
  ],
  "loc": [
    450,
    518
  ]
}
*/
== DIAGNOSTICS ==
[]
