crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_getter_generation.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment } from "@qwik.dev/core";
import { component$, useStore } from "@qwik.dev/core";
export const App = qrl(() => import("./test.tsx_App_Jlq9hNxnCvw"), "App_Jlq9hNxnCvw");
export const Cmp = qrl(() => import("./test.tsx_Cmp_VOFhWBnY6qQ"), "Cmp_VOFhWBnY6qQ");

============================= test.tsx_App_Jlq9hNxnCvw.js (ENTRY POINT) ==
import { Cmp } from "./test";
import { useStore } from "@qwik.dev/core";
export const App_Jlq9hNxnCvw = () => {
	const store = useStore({
		count: 0,
		stuff: 0,
		nested: {
			count: 0
		}
	});
	const signal = useSignal(0);
	return (
		<Cmp
			prop={'true' + 1 ? 'true' : ''}
			count={store.count}
			nested={store.nested.count}
			signal={signal}
			store={store.stuff + 12}
			value={signal.formData?.get('username')}
		>
		</Cmp>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "App_Jlq9hNxnCvw",
  "entry": null,
  "displayName": "test.tsx_App",
  "hash": "Jlq9hNxnCvw",
  "canonicalFilename": "test.tsx_App_Jlq9hNxnCvw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    76,
    424
  ]
}
*/
============================= test.tsx_Cmp_VOFhWBnY6qQ.js (ENTRY POINT) ==
export const Cmp_VOFhWBnY6qQ = (props) => {
	return (
		<>
			<p data-value={props.count}>{props.nested.count}</p>
			<p>Value {props.count}<span></span></p>
		</>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "Cmp_VOFhWBnY6qQ",
  "entry": null,
  "displayName": "test.tsx_Cmp",
  "hash": "VOFhWBnY6qQ",
  "canonicalFilename": "test.tsx_Cmp_VOFhWBnY6qQ",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    446,
    596
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==
[]
