crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_immutable_analysis.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
== DIAGNOSTICS ==
[
  {
    "scope": "optimizer",
    "category": "sourceError",
    "code": null,
    "file": "test.tsx",
    "message": "Unexpected token. Did you mean `{'>'}` or `&gt;`?"
  }
]
