crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_immutable_function_components.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { Slot } from '@qwik.dev/core';
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ _noopQrl("App_component_ckEPmXZlub0");
//
q_App_component_ckEPmXZlub0.s((props: Stuff) => {
    return <div>
			<Slot />
		</div>;
});
export const App = componentQrl(q_App_component_ckEPmXZlub0);

== DIAGNOSTICS ==
[]
